--- a/.gitignore
+++ b/.gitignore
@@ -86,8 +86,7 @@ crashlytics-build.properties
 /[Aa]ssets/Plugins/FMOD/Cache/Editor.meta
 
 # Log-files
-fmod.log
-fmod_editor.log
+*.log
 
 # FMOD 1.10.x (Legacy)
 /Assets/FMODAssets/*
